--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com"/>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FCB0DQCB0R"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BQ19YWG7PH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){ dataLayer.push(arguments); }
   gtag('js', new Date());
-  gtag('config', 'G-FCB0DQCB0R');
+  gtag('config', 'G-BQ19YWG7PH');
 </script>
 
 
